# 2025-data_structure

./: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release  README.md  README_HUFFMAN.md  UIwithPIC.cpp  chartwidget.cpp  chartwidget.h  demo_huffman.pro  demo_qt_charts.pro  huffman_main.cpp  huffmantree.cpp  huffmantree.h  huffmanwidget.cpp  huffmanwidget.h  main.cpp  计划.md
Anderson/include/: HuffmanNode.h  HuffmanTree.h
Anderson/src/: HuffmanNode.cpp
lhz/: test.txt  textread.cpp
lhz/test-12-4-2025/: test.txt  textread.cpp
project2/: Makefile  Makefile.Debug  Makefile.Release  demo_freq.pro  jieba_segment.py  main.cpp  seg_out.txt  seg_out_utf8.txt  test.txt
project2/release/: main.moc
release/: moc_chartwidget.cpp  moc_huffmanwidget.cpp
src/backend/: CMakeLists.txt  huffman_wrapper.cpp  huffman_wrapper.h
src/backend/include/: EncodingUtils.h  HuffmanTree.h  backend_api.h
src/backend/src/: 20246925_夏锐熙_代码源文件.code-workspace  HuffmanTree.cpp  backend_api.cpp  main.cpp
src/frontend/: Makefile  Makefile.Debug  Makefile.Release  README_FRONTEND.md  build_frontend_log.txt  frontend.pro  frontend_env.txt  frontend_env_check.txt  reg_hkcu.txt  reg_hklm.txt
src/frontend/debug/: object_script.HuffmanFrontend.Debug
src/frontend/include/: characterfrequencychart.h  chartwidget.h  imageencodedecodewindow.h  mainwindow.h  textencodedecodewindow.h  treenodeitem.h  treenodeitrm.h  treevisualizer.h
src/frontend/release/: moc_characterfrequencychart.cpp  moc_chartwidget.cpp  moc_imageencodedecodewindow.cpp  moc_mainwindow.cpp  moc_predefs.h  (+3 more)
(+8 files in other folders)
